# resample_zarr

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  codemeta.json  pyproject.toml  requirements.txt
docs/source/: API.rst  api.rst  conf.py  index.rst  installation.rst  intallation.rst  modules.rst  pyramids.rst  resampling.rst  usage.rst
notebooks/: config.toml  make_pyramid.ipynb  resample_zarr.ipynb
pipeline_edito/: main_downscale.py
pipeline_edito_T7.3/: datasets.csv  main_downscale.py  main_pyramid.py  test.py
resampling/: __init__.py  _config.py  _define_windows.py  _utils.py  config.py  define_windows.py  down_scale.py  extract.py  load.py  loggers.py  make_global.py  my_store.py  object_store.py  plot_logs.py  plot_zarr.py  transform.py  utils.py
resampling/config/: config.toml
tests/: test_config.py  test_down_scale.py  test_extract.py  test_pipeline.py  test_transform.py
