[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "resampling"
authors = [{name = "Willem Boone", email = "willem.boone@vliz.be"}]
dynamic = ["version", "description"]

# Regular PyPI dependencies
dependencies = [
    "xarray == 2024.9.0",
    "pandas == 2.2.2",
    "numpy == 1.26.4",
    "rioxarray == 0.17.0",
    "matplotlib == 3.9.2",
    "showit == 1.1.4",
    "carbonplan-data == 0.4.0",
    "carbonplan-styles == 0.4.2",
    "zarr == 2.18.3",
    "boto3 == 1.34.80",
    "botocore == 1.34.80",
    "dacite == 1.8.1",
    "intake == 2.0.4",
    "numcodecs == 0.12.1",
    "psutil == 5.9.8",
    "requests == 2.32.3",
    "s3fs == 2024.3.1",
    "tenacity == 9.0.0",
    "toml == 0.10.2",
    "dask == 2024.9.0",
    "scipy == 1.14.1",
    "sphinx == 7.1.2",
    "sphinx-rtd-theme == 1.3.0rc1"
]

# GitHub-based dependencies go here
[project.optional-dependencies]
git_deps = [
    "git+https://github.com/TomNicholas/datatree@54edbf77fdc756b74bfca00986f4a68e04643b29",
    "git+https://github.com/carbonplan/ndpyramid@5ab3745cc42f2dd1e384f7c9f82dac071cfde1dc"
]